--- a/Watercolor_Diffusion_v1_0.ipynb
+++ b/Watercolor_Diffusion_v1_0.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "Watercolor Diffusion is a custom-trained unconditional diffusion model trained on an original (small) dataset of 1300+ 256x256 watercolor landscapes and portraits using the [fine-tuning openai diffusion model](https://colab.research.google.com/drive/1Xfd5fm4OnhTd6IHPMGcoqw54uhGT3HdF) notebook by [Alex Spirin](https://twitter.com/devdef).\n",
         "\n",
-        "Pulp Sci-Fi Diffusion V.1 runs within a fork of [Disco Diffusion 5.4](https://colab.research.google.com/github/alembics/disco-diffusion/blob/main/Disco_Diffusion.ipynb).\n",
+        "Watercolor Diffusion V.1 runs within a fork of [Disco Diffusion 5.4](https://colab.research.google.com/github/alembics/disco-diffusion/blob/main/Disco_Diffusion.ipynb).\n",
         "\n",
         "It uses a default (and kickass!) Cut Scheduling developed by ethansmith2000.\n",
         "\n",
