--- a/Watercolor_Diffusion_v2_0.ipynb
+++ b/Watercolor_Diffusion_v2_0.ipynb
@@ -16,7 +16,7 @@
         "id": "TitleTop"
       },
       "source": [
-        "# Watercolor Diffusion v1.0 by [KaliYuga](https://twitter.com/KaliYuga_ai)\n"
+        "# Watercolor Diffusion v2.0 by [KaliYuga](https://twitter.com/KaliYuga_ai)\n"
       ]
     },
     {
@@ -24,7 +24,7 @@
       "source": [
         "Watercolor Diffusion is a custom-trained unconditional diffusion model trained on an original (small) dataset of 1300+ 256x256 watercolor landscapes and portraits using the [fine-tuning openai diffusion model](https://colab.research.google.com/drive/1Xfd5fm4OnhTd6IHPMGcoqw54uhGT3HdF) notebook by [Alex Spirin](https://twitter.com/devdef).\n",
         "\n",
-        "Watercolor Diffusion V.1 runs within a fork of [Disco Diffusion 5.4](https://colab.research.google.com/github/alembics/disco-diffusion/blob/main/Disco_Diffusion.ipynb).\n",
+        "Watercolor Diffusion V.2 runs within a fork of [Disco Diffusion 5.4](https://colab.research.google.com/github/alembics/disco-diffusion/blob/main/Disco_Diffusion.ipynb).\n",
         "\n",
         "It uses a default (and kickass!) Cut Scheduling developed by ethansmith2000.\n",
         "\n",
@@ -34,6 +34,17 @@
       ],
       "metadata": {
         "id": "AwgQP-Cdx6Iy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Watercolor Diffusion Changelog\n",
+        "July 11, 2022: Watercolor Diffusion v2 Launch\n",
+        "- added new and improved watercolordiffusion_2 model and slightly tweaked default ``` clamp_max ``` settings (.25-->.175)\n"
+      ],
+      "metadata": {
+        "id": "vbdJfhwLAFLa"
       }
     },
     {
